@@ -178,14 +178,6 @@
 # of packets being sent.
 #set_tcp_nodelay false
 
-# Time in seconds between cleaning the internal message store of
-# unreferenced messages. Lower values will result in lower memory
-# usage but more processor time, higher values will have the
-# opposite effect.
-# Setting a value of 0 means the unreferenced messages will be
-# disposed of as quickly as possible.
-#store_clean_interval 10
-
 # Time in seconds between updates of the $SYS tree.
 # Set to 0 to disable the publishing of the $SYS tree.
 #sys_interval 10
