@@ -29,6 +29,7 @@ Broker:
   from all matching subscriptions rather than the first one encountered, which
   ensures the maximum QoS requirement is met.
 - Fix incoming/outgoing quota problems for QoS>0.
+- Remove obsolete `store_clean_interval` from documentation.
 
 Client library:
 - Fix typo causing build error on Windows when building without TLS support.
